# hyprshade-rewrite

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml  rustfmt.yml  test.yml
benches/schedule/: impl_binary_search.rs  impl_linear.rs  main.rs  util.rs
hyprshade/: Cargo.toml
hyprshade/benches/schedule/: impl_btree.rs
hyprshade/src/: constants.rs  resolver.rs
hyprshade/src/cli/arg/: help.rs
hyprshade/src/cli/subcommand/: auto.rs  off.rs  (+1 more)
hyprshade/src/shaders/: vibrance.glsl.mustache
hyprshade/tests/it/: test_auto.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: builtin.rs  cli.rs  config.rs  constants.rs  dirs.rs  hyprctl.rs  lib.rs  main.rs  resolver.rs  schedule.rs  shader.rs  template.rs  time.rs  util.rs
src/cli/: auto.rs  common.rs  current.rs  install.rs  instrumentation.rs  ls.rs  off.rs  on.rs  subcommand.rs  toggle.rs
src/cli/arg/: var.rs
src/cli/subcommand/: auto.rs  current.rs  install.rs  ls.rs  off.rs  on.rs  toggle.rs
src/shaders/: blue-light-filter.glsl.mustache  color-filter.glsl.mustache  grayscale.glsl.mustache  vibrance.glsl.mustache
tests/it/: common.rs  main.rs  test_auto.rs  test_off.rs  test_on.rs  test_toggle.rs
tests/it/fixtures/: simple.glsl
tests/it/snapshots/: it__test_on__builtin_shader-2.snap  it__test_on__error__.balance.red=0.3.snap  it__test_on__error__.snap  it__test_on__error__=0.3.snap  it__test_on__error__=strength=.snap  it__test_on__error__balance..red=0.3.snap  it__test_on__error__balance.red.=0.3.snap  it__test_on__error__strength.snap  it__test_on__error__strength=.snap  it__test_on__error__strength=0.3=0.4.snap  it__test_on__error__���.snap  it__test_toggle__fallback_auto_success-00:00:00-blue-light-filter-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-00:00:00-blue-light-filter-vibrance-vibrance-with-default.snap  it__test_toggle__fallback_auto_success-00:00:00-color-filter-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-00:00:00-color-filter-vibrance-vibrance-with-default.snap  it__test_toggle__fallback_auto_success-00:00:00-invert-colors-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-00:00:00-invert-colors-vibrance-vibrance-with-default.snap  it__test_toggle__fallback_auto_success-00:00:00-vibrance-invert-colors-invert-colors-no-default.snap  it__test_toggle__fallback_auto_success-00:00:00-vibrance-invert-colors-invert-colors-with-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-blue-light-filter-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-blue-light-filter-vibrance-vibrance-with-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-color-filter-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-color-filter-vibrance-vibrance-with-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-invert-colors-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-invert-colors-vibrance-vibrance-with-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-vibrance-invert-colors-invert-colors-no-default.snap  it__test_toggle__fallback_auto_success-00:59:59.999999999-vibrance-invert-colors-invert-colors-with-default.snap  it__test_toggle__fallback_auto_success-01:00:00-blue-light-filter-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-01:00:00-blue-light-filter-vibrance-vibrance-with-default.snap  it__test_toggle__fallback_auto_success-01:00:00-color-filter-vibrance-vibrance-no-default.snap  it__test_toggle__fallback_auto_success-01:00:00-color-filter-vibrance-vibrance-with-default.snap  (+28 more)
xtask/: Cargo.toml
xtask/src/: hooks.rs  insta.rs  main.rs  test.rs
