[package]
name = "hyprshade"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/loqusion/hyprshade"

[features]
default = ["compat"]
compat = []

_lib = []
_mock_time = []

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["cargo", "derive", "env", "error-context", "wrap_help"] }
clap_derive = "4.5.41"
color-eyre = "0.6.5"
color-print = "0.3.7"
const_format = "0.2.34"
directories = "6.0.0"
eyre = "0.6.12"
mustache = "0.9.0"
phf = { version = "0.12.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
toml = "0.9.4"
toml-datetime-compat = { version = "0.3.0", features = ["chrono"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.7.0"
insta = { version = "1.43.1", features = ["filters", "toml"] }
insta-cmd = "0.6.0"
parking_lot = "0.12.4"
proc_macros = { version = "0.1.0", path = "proc_macros" }
tempfile = "3.20.0"

[workspace]
members = [".", "proc_macros", "xtask"]

[profile.release]
opt-level = "z"
strip = true
lto = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[[bench]]
name = "schedule"
harness = false
